# multi-language-bazel-monorepos

./: WORKSPACE.bazel
.github/workflows/: main.yml
projects/joke_generator/: BUILD
projects/joke_generator/src/main/java/com/example/: KnockKnock.java
projects/joke_generator/src/main/resources/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
projects/node_calculator/: BUILD.bazel  calculator.js  calculator.spec.js
